# game_engine

./: CMakeLists.txt  todo.md
.cache/clangd/index/: components.hpp.22450AA2EC4A6A7B.idx  ecs.hpp.88D6F1BBCB023BBD.idx  game.cpp.5B9BD709CE421B83.idx  game.hpp.E761FF7BA5EF5593.idx  game_object.cpp.20B7F477CD7E9FC3.idx  game_object.hpp.EF65AD9825C5CF85.idx  gl.c.0FFE7926FB25CCDE.idx  gl.h.AD8240ABF6B08DE2.idx  imconfig.h.F689B7D2EB86A74F.idx  imgui.cpp.1CA29EBD3FF6E6F7.idx  imgui.h.D5580915DED34463.idx  imgui_demo.cpp.E5142A5D49775804.idx  imgui_draw.cpp.773F472DC22C4779.idx  imgui_impl_opengl3.cpp.87D5ADD12AF8827C.idx  imgui_impl_opengl3.h.FC4D610726271EB3.idx  imgui_impl_opengl3_loader.h.CC18EEB098F8896D.idx  imgui_impl_sdl2.cpp.3271D45F747EBFB2.idx  imgui_impl_sdl2.h.FD7AE75EA1F2044B.idx  imgui_internal.h.867138B5DA34CE49.idx  imgui_tables.cpp.56FACA3888BC3C1C.idx  imgui_widgets.cpp.B9458A6C211A2E54.idx  imstb_rectpack.h.0EF15EB0622F0526.idx  imstb_textedit.h.423C70CD85938F3D.idx  imstb_truetype.h.1C4114B205841087.idx  khrplatform.h.B31B612775DF6EFA.idx  main.cpp.3215585FA237301B.idx  map.cpp.C1AC674D33E20E3C.idx  map.hpp.87535F7DF04C120F.idx  position_component.hpp.1BCF7920439CF6EE.idx  sprite_component.hpp.16883D3B47C38161.idx  texture_manager.cpp.BF48BC85EACDEAA7.idx  texture_manager.hpp.4087427F056D169C.idx
Src/: Game.cpp  GameObject.cpp  GameObject.hpp  Makefile  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
Src/ECS/: ECS.hpp  PositionComponent.hpp  SpriteComponent.hpp
include/: game.hpp  game_object.hpp  imguihandler.h  map.hpp  sdl_handler.hpp  texture_manager.hpp
include/ECS/: components.hpp  position_component.hpp  sprite_component.hpp
lib/glad/include/glad/: gl.h
src/: game.cpp  game_object.cpp  main.cpp  map.cpp  texture_manager.cpp
src/gui/: imguihandler.cpp  sdl_handler.cpp
